--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,4 +57,4 @@ jobs:
         run: |
           git add .
           git commit -m "Update repository with latest /web content from upstream"
-          git push origin main```
+          git push origin main
